version 0.1.3
============================
o albedo analysis for VIS and NIR separately for JSBACH raw output
o bugfix with datetime conversion for GlobalMean plot.
o proper implementation of multimodel mean


version 0.1.2 (=rev274)
============================
o implemented new class JSBACH_RAW2, which automatically preprocessed JSBACH and ECHAM output from different (yearly) files
o removed dependencies from old pyCDO module which is supposed to be obsolete and will be removed in the future
o applied several bugfixes
o changed name of main routine for benchmarking from main.py to pycmbs.py
o handling of generation of temporary files in case that directory is write protected. Then temporary data is written to temp directory specified by the system



version 0.1.1 (= rev258)
============================
o path of INI files can now be specified explicitely in benchmarking framework
o implemented automatic calculation of land-sea masks using CDO operator topo on-the-fly.
o implementation of sea-ice analysis in benchmarking framework
o novel operator areasum() for data objet to perform weighted average calculations
o novel functionality to specify remapping method and target grids for remapping in the benchmarking framework
o implemented much more flexibility for configuring report.
o implemented support for different calendars using netcdftime library provided in netCDF4 library. COPYRIGHT has been
  changed accordingly. Note that a major refactoring was needed for that purpose.
  NOTE all files written with older versions pyCMBS might now show a timeshift of one day! This is due to
  an artefact in the pylab num2date/date2num functions which provide the number of days relative to 0001-01-01 *PLUS ONE*
  (see num2date documentation). The new routines have not this artefact.
  Do allow for backward compability with v0.1.0, an option 'oldtime' has been added to Data object, which mimics the old
  behavior.